[package]
name = "rsv-rust"
version = "0.0.2"
edition = "2021"
authors = ["Maxi Saparov <max.saparov@gmail.com>"]
description = "RSV reading and writing with Serde support"
documentation = "https://docs.rs/rsv"
homepage = "https://github.com/MostlyMax/rsv-rust"
repository = "https://github.com/MostlyMax/rsv-rust"
readme = "README.md"
keywords = ["rsv", "parser", "serde"]
license = "MIT"
categories = ["encoding", "parser-implementations"]


[dependencies]
serde = { version = "1.0.195", features = ["derive"] }

[dev-dependencies]
zstd = "0.13.0"

[[example]]
name="with-compression"
